[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Spinner.gd" type="Script" id=2]
[ext_resource path="res://Assets/cross.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 10.6436

[node name="Spinner" type="Node2D"]
rotation = 4079.17
script = ExtResource( 2 )

[node name="Cross" type="Sprite" parent="."]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )

[node name="Node" type="Area2D" parent="."]
position = Vector2( 100, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node"]
rotation = -5.82077e-11
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Node"]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 1 )

[node name="DroppingTimer" type="Timer" parent="."]
[connection signal="area_entered" from="Node" to="." method="_on_Node_area_entered"]
[connection signal="timeout" from="DroppingTimer" to="." method="_on_DroppingTimer_timeout"]
